pkg/lang/syntax/testdata/ub/lower/invalid/lock-schema-errors.ub
lock: {
  version: '1'
  deps: {
    'github.com/cloudboss/example': {
      kind: ub
      version: 'v0.1.0'
      commit: 'abc123'
    }
    'github.com/cloudboss/example-go': {
      kind: go
      version: 'v0.1.0'
      commit: 'def456'
      hash: 'sha256:nope'
    }
    'github.com/cloudboss/example-bad': {
      kind: other
      commit: 'bad789'
    }
  }
}
